Christian Mardmuller  chm@kdt.de                        10 Nov 1999-29 Feb 2000
Christoph Plattner    Christoph.Plattner@dot.at         31 Jan 2000- 2 Feb 2000
David Murn            scuffer@hups.apana.org.au         11 Nov 1998-15 Nov 1999
Giles Russell                                           22 Nov 1999
Greg Haerr                                              14 Jul 1999-20 Jul 1999
Harry Kalogirou       HarKal@rainbow.cs.unipi.gr        20 Jun 2001-16 May 2002
Jacek Lipkowski       sq5bpf@acid.ch.pw.edu.pl          20 Jan 2002
Ken Martwick          kenm@efn.org                      12 May 2002
M Warner Losh         imp@village.org                   20 Jan 2002
Mario Frasca                                            20 Jan 2000-14 Feb 2000
Paul Nasrat           pauln@truemesh.com                29 Oct 2001-24 Apr 2002
Per Olofsson          MagerValp@cling.gu.se             25 Feb 2000
Peter L Vachuska      pvachusk@nconnect.net             13 Aug 2001
Richard Wallman       murkygoth@murkygoth.uklinux.net    2 Apr 2002
Riley Williams        Riley@Williams.Name               16 Nov 1998-13 May 2002
Roman Festchook       roma@polesye.net                  27 Oct 2001
Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Sat May 25 21:30:35 BST 2002	Riley Williams <Riley@Williams.Name>

	* Simplified configuration of SiBO wrt_disk.img utility. The two
	  configuration parameters are now in a separate tools.h header
	  file, and both wrt_disk.c and file.s make use of the values in
	  this header file to achieve the required task.
	* Made wrt_disk.img use an unsigned long int for the address var
	  rather than the two separate unsigned short ints that were in
	  use previously.
